--- a/index.html
+++ b/index.html
@@ -644,19 +644,15 @@
                 <h2 class="section-title">Our Hotel Policies</h2>
                 <p class="about-text">
                     <ol>
-    <li>Check-in Time – Usually starts from 12:30 to midnight.</li>
+    <li>Check-in Time – Usually starts from 12:30 PM to midnight.</li>
     <li>Early Check-in – Subject to room availability and may incur extra charges.</li>
+    <li>Check-out Time – Usually 10 AM–11 AM; late check-out may cost extra.</li>
     <li>ID Proof Required – Valid government-issued photo ID with address proof is mandatory.</li>
-    <li>Age Requirement – Minimum check-in age is above 18.</li>
     <li>Booking Confirmation – Must present booking reference or confirmation.</li>
-    <li>Security Deposit – May be required via cash or card hold.</li>
     <li>Payment – Full or partial payment due at check-in.</li>
     <li>Guests Limit – Only registered guests allowed in the room.</li>
-    <li>Check-out Time – Usually 10 AM–11 PM; late check-out may cost extra.</li>
-    <li>Pets Policy – Not allowed.</li>
     <li>Smoking Policy – Both smoking and non-smoking rooms available.</li>
-    <li>Cancellation/No-Show – Charges apply as per booking terms.</li>
-    <li>Couple-Friendly Policy – Unmarried couples allowed if valid IDs provided; both guests must be 18+.</li>
+    <li>Couple-Friendly Policy – Unmarried couples allowed with valid IDs; both guests must be 18+.</li>
 </ol>
 
                 </p>
@@ -915,4 +911,5 @@ Message: ${message}`;
         });
     </script>
 </body>
+
 </html>
